--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
-
+package-lock.json
+src/app/environment.ts
 # Compiled output
 /dist
 /tmp
